# 2d-sprite-engine

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  build_res.sh
engine/: Cargo.toml
engine/lvme-decl/: deltatime.lua  env.lua  log.lua  print.lua
engine/lvme-impl/: deltatime.lua  env.lua
engine/src/: asset_management.rs  buffer.rs  camera.rs  draw_batch.rs  main.rs  render_engine.rs  sprite.rs  texture.rs  vertex.rs
engine/src/asset_management/: cache_clean_job.rs  gpu_texture_ref.rs  mod.rs  texture_load_job.rs  uuid.rs
engine/src/demo_sys/: mod.rs  move_with_cursor.rs
engine/src/ecs/: mod.rs  stage.rs
engine/src/ecs/resources/: delta_time.rs  input.rs  mod.rs
engine/src/ecs/systems/: clean_cache.rs  delta_time.rs  mod.rs
engine/src/pipelines/: job.rs  mod.rs  sprite.rs
engine/src/render_engine/: buffer.rs  camera.rs  ecs.rs  mod.rs  vertex.rs
engine/src/render_engine/components/: mod.rs  position.rs  texture.rs
engine/src/render_engine/resources/: command_buffer_collector.rs  frame.rs  mod.rs
engine/src/render_engine/systems/: create_frame.rs  mod.rs  render.rs  render_egui_ui.rs  render_sprites.rs  submit_commands.rs  update.rs
engine/src/scheduler/: mod.rs
engine/src/scripting/: compile_job.rs  mod.rs
engine/src/scripting/lvme/: log.rs  mod.rs  print_hook.rs  time.rs
engine/src/scripting/systems/: mod.rs  update_scripts.rs
engine/src/ui/: cache.rs  fps.rs  integration.rs  mod.rs  profiler.rs  scheduler.rs  update_debug_ui_system.rs
res/assets/: placeholder-32.aseprite  test-script.lua  test-script.wasm
res/keys/: key.pair  key.prv  key.pub
res/shaders/: sprite.wgsl
