[package]
name = "engine"
version = "0.1.0"
authors = ["Jasper Fortuin <zeskeertwee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# trace and replay features enable serde implementations on wgpu types
wgpu = { version = "0.11.0", features = ["trace", "replay"] }
image = "0.23.14"
winit = "0.25.0"
cgmath = "0.18.0"
vach = "0.2.1"
pretty_env_logger = "0.4.0"
log = "0.4.14"
pollster = "0.2.4"
dialog = "0.3.0"
ahash = "0.7.6"
lazy_static = "1.4.0"
bytemuck = { version = "1.7.2", features = ["derive"] }
anyhow = "1.0.44"
parking_lot = "0.11.2"
uuid = { version = "0.8.2", features = ["v5"] }
serde = { version = "1.0.130", features = ["derive"] }
crossbeam = "0.8.1"
arc-swap = "1.4.0"
egui = "0.15.0"
egui_winit_platform = "0.11.0"
egui_wgpu_backend = "0.14.0"
epi = "0.15.0"