[package]
name = "engine"
version = "0.1.0"
authors = ["Jasper Fortuin <zeskeertwee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# trace and replay features enable serde implementations on wgpu types
wgpu = { version = "0.12.0", features = ["trace", "replay"] }
image = "0.23.14"
winit = "0.26.1"
cgmath = "0.18.0"
pretty_env_logger = "0.4.0"
log = "0.4.14"
pollster = "0.2.4"
dialog = "0.3.0"
ahash = "0.7.6"
lazy_static = "1.4.0"
bytemuck = { version = "1.7.2", features = ["derive"] }
anyhow = "1.0.44"
parking_lot = "0.11.2"
uuid = { version = "0.8.2", features = ["v5"] }
serde = { version = "1.0.130", features = ["derive"] }
crossbeam = "0.8.1"
arc-swap = "1.4.0"
egui = "0.16.1"
egui_winit_platform = "0.13.0"
egui_wgpu_backend = "0.16.0"
epi = "0.16.0"
dashmap = "5.0.0"
bevy_ecs = "0.12.0"

mlua = { version = "0.9.1", features = ["luau", "vendored", "send"] }

puffin = "0.13.0"
puffin_egui = "0.13.0"
puffin_http = "0.10.0"

[dependencies.vach]
git = "https://github.com/zeskeertwee/vach"
rev = "fd1ad87a1719b710520595f842b4a2f98483697b"